--- a/style.css
+++ b/style.css
@@ -6,7 +6,10 @@ body {
     margin: 0;
     padding: 0;
     display: flex;
+    font-size: 1rem;
 }
+
+/*LEFT PANEL*/
 
 header {
     background-image: url("./images/background.jpg");
@@ -25,16 +28,16 @@ h1 {
     text-align: center;
     font-size: 5rem;
     color: white;
-
 }
 
 .image {
     background-color: rgba(0, 0, 0, .5);
     height: 150px;
-    margin-top: 100%;
+    margin-top: 200px;
     padding: 1rem;
     display: flex;
     align-items: center;
+    justify-content: center;
 }
 
 h1 img {
@@ -52,4 +55,78 @@ h1 img {
 .credit a {
     color: white;
     font-size: .8rem;
+}
+
+/*MAIN PANEL*/
+
+main {
+    display: flex;
+    flex-direction: column;
+    padding: 6rem 2rem;
+    font-family: Arial, sans-serif;
+    background-color: rgb(240, 240, 240);
+}
+
+main p:first-child,
+main P:nth-child(2) {
+    font-weight: bold;
+}
+
+.em {
+    font-style: italic;
+}
+
+form {
+    background-color: white;
+    padding: 1rem;
+    min-width: 350px;
+    margin-bottom: 2rem;
+}
+
+h2 {
+    font-weight: 500;
+    font-size: 1.2rem;
+}
+
+
+.form-content {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.form-input {
+   display: flex;
+   flex-direction: column;
+   width: 48%;
+   text-transform: uppercase;
+   font-size: .7rem;
+   letter-spacing: 1px;
+}
+
+
+input {
+    width:90%;
+    margin-bottom: .5rem;
+    margin-left: 5px;
+    height: 1.5rem;
+}
+
+label {
+    margin: 5px;
+}
+
+button {
+    width: 50%;
+    padding: .75rem;
+    border-radius: 10px;
+    border: none;
+    background-color: rgb(200, 200, 200);
+    text-transform: uppercase;
+
+}
+
+button:hover {
+    background-color: rgb(150, 150,150);
+    cursor: pointer;
 }
