--- a/style.css
+++ b/style.css
@@ -80,7 +80,6 @@ form {
     background-color: white;
     padding: 1rem;
     min-width: 350px;
-    margin-bottom: 2rem;
 }
 
 h2 {
@@ -123,6 +122,7 @@ button {
     border: none;
     background-color: rgb(200, 200, 200);
     text-transform: uppercase;
+    margin: 2rem 0 .3rem 0;
 
 }
 
