--- a/style.css
+++ b/style.css
@@ -25,8 +25,7 @@ header {
 
 h1 {
     flex-grow: 1;
-    text-align: center;
-    font-size: 5rem;
+    font-size: 4rem;
     color: white;
 }
 
@@ -135,4 +134,12 @@ button:hover {
 
 p a {
     color: rgba(24, 101, 24,.9);
+}
+
+.match-error {
+    border-color: red;
+}
+
+.match-error::after {
+    content: "Passwords don't match";
 }
